<package format="3">
  <name>robot_body_filter</name>
  <version>1.3.1</version>

  <description>Filters the robot's body out of laser scans or point clouds.</description>

  <license>BSD</license>

  <url type="website">https://github.com/peci1/robot_body_filter</url>

  <author>Eitan Marder-Eppstein</author>
  <author>Tomas Petricek</author>
  <author>Martin Pecka</author>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>filters</depend>
  <depend>geometric_shapes</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>libpcl-all-dev</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>fcl</depend>




  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
